Add new articles to papers.bib and update author name in _config.yml

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,2 +1,20 @@
 ---
 ---
+
+@article{ahmad2023analyzing,
+  abbr={JKAIA},
+  bibtex_show={false},
+  title={Analyzing Efficacy of Pivot Techniques in LLMs for Low Resource Languages},
+  author={Uzair Ahmed and Muhammad Faizan Zahid and Huzama Ahmad and James Thorne and Alice Oh},
+  journal={Korean AI Association},
+  year={2023},
+}
+
+@article{hong2023selfguided,
+  abbr={CKAIA},
+  bibtex_show={false},
+  title={Self‐Guided Framework for Improving Arithmetic Reasoning in Large Language Models with Reinforcement Learning},
+  author={Jiwoo Hong and Huzama Ahmad and Minsu Kim and James Thorne},
+  journal={Korean AI Association},
+  year={2023},
+}
