Fix typo in title of paper

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -13,7 +13,7 @@
 @article{hong2023selfguided,
   abbr={CKAIA},
   bibtex_show={false},
-  title={Self‐Guided Framework for Improving Arithmetic Reasoning in Large Language Models with Reinforcement Learning},
+  title={Self Guided Framework for Improving Arithmetic Reasoning in Large Language Models with Reinforcement Learning},
   author={Jiwoo Hong and Huzama Ahmad and Minsu Kim and James Thorne},
   journal={Korean AI Association},
   year={2023},
